@@ -120,7 +120,7 @@ jobs:
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
             git add PART
-            git commit -m "${tag_name} Part: ${part_value}"
+            git commit -m "${tag_name} Part: ${new_value}"
             git push
 
       - name: Login to Docker Hub
